# project_02-Tiki_API

./: .gitignore  HaDucHuy_DE-K24_project02_main.py  README.md  Utilities.py  main.py  pyproject.toml  read_csv.py  writer.py
bash/: script.sh
files/: api_response_1.json  api_response_10.json  api_response_100.json  api_response_101.json  api_response_102.json  api_response_103.json  api_response_104.json  api_response_105.json  api_response_106.json  api_response_107.json  api_response_108.json  api_response_109.json  api_response_11.json  api_response_110.json  api_response_111.json  api_response_112.json  api_response_113.json  api_response_114.json  api_response_115.json  api_response_116.json  api_response_117.json  api_response_118.json  api_response_119.json  api_response_12.json  api_response_120.json  api_response_121.json  api_response_122.json  api_response_123.json  api_response_124.json  api_response_125.json  api_response_126.json  api_response_127.json  api_response_128.json  api_response_129.json  api_response_130.json  api_response_131.json  api_response_132.json  api_response_133.json  api_response_134.json  api_response_14.json  (+75 more)
scr/: main_funcs.py  read_files.py  utils.py  write_files.py
src/: main_funcs.py  utils.py
