[project]
name = "tiki-api"
version = "0.1.0"
description = ""
authors = [
    {name = "harry-hdh",email = "hdh997@outlook.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
